add edge case unit tests and clean up swagger config